[gd_scene load_steps=12 format=3 uid="uid://chbbpogg3k2co"]

[ext_resource type="Texture2D" uid="uid://cg47sjteg6lke" path="res://img/despaired_cat.jpg" id="1_l2uci"]
[ext_resource type="Script" path="res://cat.gd" id="1_pojx8"]
[ext_resource type="Texture2D" uid="uid://djl68en3ysihf" path="res://img/DVD-Video.png" id="3_fqlsv"]
[ext_resource type="Script" path="res://ball.gd" id="3_mwn24"]
[ext_resource type="Texture2D" uid="uid://d3lw3rgu42tap" path="res://img/wall.png" id="5_223k3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8iny"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywwam"]
size = Vector2(106, 20)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ovur3"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_dbvkc"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_dhqu7"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_aa45f"]

[node name="Node2D" type="Node2D"]
position = Vector2(0, -2)

[node name="Cat" type="CharacterBody2D" parent="."]
position = Vector2(941, 890)
scale = Vector2(8.47375, 8.47375)
script = ExtResource("1_pojx8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cat"]
scale = Vector2(1, 0.99528)
shape = SubResource("RectangleShape2D_g8iny")

[node name="Sprite2D" type="Sprite2D" parent="Cat"]
scale = Vector2(0.0224216, 0.0224215)
texture = ExtResource("1_l2uci")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(937, 358)
script = ExtResource("3_mwn24")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
scale = Vector2(0.96, 3.08)
shape = SubResource("RectangleShape2D_ywwam")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
scale = Vector2(0.04, 0.04)
texture = ExtResource("3_fqlsv")

[node name="Node" type="Node" parent="."]

[node name="Right_Wall" type="StaticBody2D" parent="Node"]
position = Vector2(1353, 514)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Right_Wall"]
shape = SubResource("WorldBoundaryShape2D_ovur3")

[node name="Left_Wall" type="StaticBody2D" parent="Node"]
position = Vector2(558, 490)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Left_Wall"]
shape = SubResource("WorldBoundaryShape2D_dbvkc")

[node name="Wall" type="Sprite2D" parent="Node/Left_Wall"]
position = Vector2(-19, 7)
scale = Vector2(0.280001, 0.280001)
texture = ExtResource("5_223k3")

[node name="Wall2" type="Sprite2D" parent="Node/Left_Wall"]
position = Vector2(814, 7)
scale = Vector2(0.280001, 0.280001)
texture = ExtResource("5_223k3")

[node name="Top_Wall" type="StaticBody2D" parent="Node"]
position = Vector2(906, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Top_Wall"]
shape = SubResource("WorldBoundaryShape2D_dhqu7")

[node name="Bottom_Wall" type="StaticBody2D" parent="Node"]
position = Vector2(936, 1079)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Bottom_Wall"]
shape = SubResource("WorldBoundaryShape2D_aa45f")
